Strength Lab (GYM Website)

--- a/src/Components/AboutUs/About.css
+++ b/src/Components/AboutUs/About.css
@@ -1,5 +1,5 @@
 .backimgabout{
-    background:linear-gradient( #00000066 100%, #00000066 100%),url("http://tofit.like-themes.com/wp-content/uploads/2024/08/inner_HEADER_04.jpg");
+    background:linear-gradient( #00000066 100%, #00000066 100%),url("https://github.com/YashSinghal001/Images-Only/blob/main/inner_HEADER_04.jpg?raw=true");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50% 0px;
