--- a/src/Components/Schedule/Schedule.css
+++ b/src/Components/Schedule/Schedule.css
@@ -1,6 +1,6 @@
 /* BAckImage */
 .backimg{
-    background-image: url("https://radiustheme.com/demo/wordpress/themes/gymat/wp-content/themes/gymat/assets/img/banner.jpg");
+    background-image: url("https://raw.githubusercontent.com/YashSinghal001/Images-Only/refs/heads/main/banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
