--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -6,7 +6,7 @@
 
 /* BAckImage */
 .backimg{
-    background-image: url("https://radiustheme.com/demo/wordpress/themes/gymat/wp-content/themes/gymat/assets/img/banner.jpg");
+    background-image: url("https://raw.githubusercontent.com/YashSinghal001/Images-Only/refs/heads/main/banner.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
@@ -52,7 +52,8 @@
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     background-color: transparent;
     margin-bottom: 20px;
-    transition: transform 0.3s, box-shadow 0.3s;
+    transition: transform 0.4s, box-shadow 0.3s;
+    cursor: pointer;
 }
 
 .info-box i {
@@ -62,6 +63,7 @@
     border-radius: 50%;
     color: #ff0606;
     animation: pulse 2s infinite;
+    transition: all .3s linear;
 }
 
 .info-box h4, .info-box p {
