--- a/src/App.css
+++ b/src/App.css
@@ -1197,6 +1197,7 @@ transform: scale(1.05);
     right: 20px;
     background-color: #ff0033;
     color: white;
+    border: none;
     width: 50px;
     height: 50px;
     border-radius: 50%;
@@ -1256,6 +1257,7 @@ transform: scale(1.1);
     font-size: 15px !important;
     font-weight: 600 !important;
 }
+
 
 
 
@@ -1511,6 +1513,9 @@ transform: scale(1.1);
             right: 190px;
         }
 }
+
+
+
 @media only screen and (min-width:768px) {
     .rocket{
     right: 40%;
